[package]
name = "vs_toolbox"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = {version="0.17.0", features=["persistence"]}
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}
urlparse="0.7.3"
serde_urlencoded = "0.7.1"
rusqlite = { version = "0.27.0", features = ["bundled"] }
dirs-sys = "0.3.6"
strum = {version="0.24.0", features=["derive"]}

[profile.release]
opt-level = 2 # fast and small wasm

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
